test/errors/error9.sp
%condition has a subcondition X_i rel X_j, where (rel is >,<,>= or <=) and s_i or s_j is not a basic sort.
sorts
#s={f(a)}.
#s1=f(#s(X),#s(Y)):X>Y.
predicates
rules
